--- a/rl_agent/pyproject.toml
+++ b/rl_agent/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "ipywidgets>=8.1.7",
     "matplotlib>=3.10.6",
     "mypy>=1.18.1",
+    "optuna>=4.5.0",
     "pytest-notebook>=0.10.0",
     "torch>=2.8.0",
     "torchinfo>=1.8.0",
