--- a/rl_agent/pyproject.toml
+++ b/rl_agent/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "flake8>=7.3.0",
     "ipykernel>=6.30.1",
     "ipytest>=0.14.2",
     "ipywidgets>=8.1.7",
