--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,9 @@ rl_agent/model_weights/*
 # BC模倣学習で使用した棋譜データ
 rl_agent/Egaroucid_Train_Data/*
 rl_agent/data/*
+
+# Optunaのデータベース
+rl_agent/mori/dbs/*
+
+# 学習したモデル
+rl_agent/mori/models/*
