--- a/rl_agent/pyproject.toml
+++ b/rl_agent/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "matplotlib>=3.10.6",
     "mypy>=1.18.1",
     "optuna>=4.5.0",
+    "pillow>=11.3.0",
     "pytest-notebook>=0.10.0",
     "torch>=2.8.0",
     "torchinfo>=1.8.0",
